#67 - process, store, and display tasking results (#69)

--- a/functionary/ui/templates/core/task_detail.html
+++ b/functionary/ui/templates/core/task_detail.html
@@ -1,39 +1,17 @@
 {% extends "base.html" %}
-
 {% load unicorn %}
-
 {% block content %}
-<div class="column is-full">
-    <nav class="breadcrumb has-arrow-separator" aria-label="breadcrumbs">
-        <ul>
-            <li><a href="{% url 'ui:task-list' %}">Task List</a></li>
-            <li class="is-active"><a href="#">{{ task.function.name }}</a></li>
-        </ul>
-    </nav>
-</div>
-<div class="column">
-    {% unicorn 'task_title' task=task %}
-    <div class="column has-addons" >
-        <div class="field">
-            <label class="label"><i class="fa fa-building"></i>&nbsp;{{ task.environment.name }}</label>
-            <label class="label" for="users"><i class="fa fa-user"></i>&nbsp;Creator:</label>
-            <ul id="users">
-                <li class="block ml-4">
-                    <p>{{ task.creator.first_name }} {{ task.creator.last_name }} <span class="has-text-grey-light">({{ task.creator.username }})</span>
-                        at {{ task.created_at }}
-                    </p>
+    <div class="column is-full">
+        <nav class="breadcrumb has-arrow-separator" aria-label="breadcrumbs">
+            <ul>
+                <li>
+                    <a href="{% url 'ui:task-list' %}">Task List</a>
+                </li>
+                <li class="is-active">
+                    <a href="#">{{ task.function.name }}</a>
                 </li>
             </ul>
-        </div>
-        <div class="field">
-            <label class="label" for="users"><i class="fa fa-list"></i>&nbsp;Parameters:</label>
-            <ul id="params">
-                <li class="block ml-4">
-                    <p class="is-font-monospace">{{ task.parameters }}</p>
-                </li>
-            </ul>
-        </div>
+        </nav>
     </div>
-</div>
-
+    {% unicorn 'task_detail' task=task %}
 {% endblock content %}
