Add additional parameter types (#71)

--- a/functionary/ui/static/css/functionary.css
+++ b/functionary/ui/static/css/functionary.css
@@ -21,3 +21,12 @@
 .environment-select * {
     color: black;
 }
+.errorlist > li {
+    color: red;
+}
+.errors {
+    color: red;
+}
+textarea.input {
+    height: 100px;
+}
