--- a/functionary/ui/templates/base.html
+++ b/functionary/ui/templates/base.html
@@ -87,6 +87,14 @@
                     </ul>
                     <ul class="menu-list block">
                         <li class="menu-item">
+                            <a href="{% url 'ui:scheduled-tasks' %}">
+                                <span class="icon has-text-success"><i class="fa fa-lg fa-clock"></i></span>
+                                &nbsp;Scheduling
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="menu-list block">
+                        <li class="menu-item">
                             <a href="{% url 'ui:package-list' %}">
                                 <span class="icon has-text-info"><i class="fa fa-lg fa-cubes"></i></span>
                                 &nbsp;Packages
