--- a/functionary/ui/templates/base.html
+++ b/functionary/ui/templates/base.html
@@ -19,9 +19,6 @@
               type="image/png"
               href="{% static 'favicon.ico' %}"/>
         <link rel="stylesheet"
-              href="{% static 'css/functionary.css' %}"
-              type="text/css"/>
-        <link rel="stylesheet"
               href="{% static 'css/bulma-0.9.4.min.css' %}"
               type="text/css"/>
         <link rel="stylesheet"
@@ -30,7 +27,11 @@
         <link rel="stylesheet"
               href="{% static 'css/pretty-print-json-1.2.css' %}"
               type="text/css"/>
+        <link rel="stylesheet"
+              href="{% static 'css/functionary.css' %}"
+              type="text/css"/>
         <title>Functionary</title>
+        <script src="{% static 'js/htmx-1.8.4.min.js' %}"></script>
         <script src="{% static 'js/pretty-print-json-1.2.min.js' %}"></script>
         <!-- This script will run when the page loads and the menus are available -->
         <script src="{% static 'js/highlight-menu-item.js' %}" defer></script>
@@ -55,7 +56,7 @@
                     <div class="column is-4 has-text-right">
                         <div class="top-right-container">
                             {% if user.is_authenticated %}
-                                <div class="has-text-right">
+                                <div>
                                     <span class="icon"><i class="fa fa-user"></i></span>&nbsp;{{ user }}
                                     <br/>
                                     {% unicorn 'env_to_select' %}
@@ -128,5 +129,17 @@
                 {% endblock content %}
             </main>
         </div>
+        <script>
+            // Add the X-CSRFToken header for HTMX requests
+            document.body.addEventListener('htmx:configRequest', (event) => {
+                event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
+            })
+            // Show an error message when a bad status comes back from an HTMX call
+            document.body.addEventListener('htmx:beforeOnLoad', (event) => {
+                if (event.detail.xhr.status >= 400) {
+                    alert(event.detail.xhr.responseText)
+                }
+            });
+        </script>
     </body>
 </html>
