--- a/functionary/ui/templates/core/function_detail.html
+++ b/functionary/ui/templates/core/function_detail.html
@@ -34,29 +34,17 @@
                 {% endif %}
             </h1>
         </div>
-        {% if function.summary %}
-            <div class="field ml-4">
-                <label class="label" for="desc">Summary:</label>
-                <span class="ml-4">{{ function.summary }}</span>
-            </div>
-        {% endif %}
         {% if function.description %}
             <div class="field ml-4">
                 <label class="label" for="desc">Description:</label>
-                <span class="ml-4">{{ function.description }}</span>
+                <span id="desc" class="ml-4">{{ function.description }}</span>
+            </div>
+        {% elif function.summary %}
+            <div class="field ml-4">
+                <label class="label" for="desc">Summary:</label>
+                <span id="desc" class="ml-4">{{ function.summary }}</span>
             </div>
         {% endif %}
-        <form id="djangoForm"
-              method="post"
-              action="{% url 'ui:function-execute' %}">
-            {% csrf_token %}
-            <input type="hidden" name="function_id" value="{{ function.id }}"/>
-            <div class="column has-addons">
-                {{ form.non_field_errors }}
-                {{ form }}
-                <input class="button is-link" type="submit" value="Execute"/>
-            </div>
-        </form>
         {% if function.return_type %}
             <div class="field ml-4">
                 <label class="label" for="desc">Return Type:</label>
@@ -69,6 +57,34 @@
                 <span class="ml-4">{{ function.output_format }}</span>
             </div>
         {% endif %}
+        <label class="label ml-4">Create Task:</label>
+        <div class="has-background-white-ter ml-4">
+            <form id="djangoForm"
+                  method="post"
+                  action="{% url 'ui:function-execute' %}">
+                {% csrf_token %}
+                <input type="hidden" name="function_id" value="{{ function.id }}"/>
+                <div class="column has-addons">
+                    {{ form.non_field_errors }}
+                    {{ form }}
+                    {% if missing_variables %}
+                        <div class="field ml-4 missing-variables has-background-danger-light has-text-danger">
+                            <span>Tasking this function may not work as expected; the following variables are missing:</span>
+                            <ul>
+                                {% for missing in missing_variables %}
+                                    <li>
+                                        <span>{{ missing }}</span>
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    {% endif %}
+                    <input class="button {% if missing_variables %}is-warning{% else %}is-link{% endif %}"
+                           type="submit"
+                           value="Execute"/>
+                </div>
+            </form>
+        </div>
         <div class="p-3 accordions">
             <div class="accordion is-info {% if not form %} is-active{% endif %}">
                 <div class="accordion-header toggle">
