--- a/functionary/ui/templates/base.html
+++ b/functionary/ui/templates/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load unicorn %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -35,10 +34,8 @@
         <script src="{% static 'js/pretty-print-json-1.2.min.js' %}"></script>
         <!-- This script will run when the page loads and the menus are available -->
         <script src="{% static 'js/highlight-menu-item.js' %}" defer></script>
-        <script src="{% static 'js/htmx-1.8.4.min.js' %}"></script>
-        {% unicorn_scripts %}
     </head>
-    <body>
+    <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
         <section class="hero is-small is-link mb-r">
             <div class="hero-body">
                 <div class="columns">
@@ -54,19 +51,20 @@
                             <p class="subtitle is-4">Run your functions</p>
                         </a>
                     </div>
-                    <div class="column is-4 has-text-right">
-                        <div class="top-right-container">
+                    <div class="column is-4">
+                        <div class="top-right-container has-text-right">
                             {% if user.is_authenticated %}
                                 <div>
-                                    <span class="icon"><i class="fa fa-user"></i></span>&nbsp;{{ user }}
-                                    <br/>
-                                    {% unicorn 'env_to_select' %}
+                                    <p>
+                                        <span class="icon"><i class="fa fa-user"></i></span>&nbsp;{{ user }}
+                                    </p>
+                                    {% include "partials/env_selector.html" %}
                                 </div>
-                                <div >
-                                    <div>
+                                <div>
+                                    <p>
                                         <span class="icon has-text-danger"><i class="fa fa-door-open"></i></span>
                                         <a class="is-underlined" href="{% url 'ui:logout' %}">Logout</a>
-                                    </div>
+                                    </p>
                                 </div>
                             {% endif %}
                         </div>
@@ -131,16 +129,21 @@
                     {% endif %}
                 </aside>
             {% endif %}
-            <main class="column">
-                {% block content %}
-                {% endblock content %}
+            <main class="column is-9 container">
+                <div id="data_div"
+                     hx-get="{{ request.get_full_path }}"
+                     hx-trigger="reloadData from:body"
+                     hx-select="#dataBlock"
+                     hx-swap="innerHTML"
+                     hx-swap-oob="true">
+                    <div id="dataBlock" hx-disinherit="*">
+                        {% block content %}
+                        {% endblock content %}
+                    </div>
+                </div>
             </main>
         </div>
         <script>
-            // Add the X-CSRFToken header for HTMX requests
-            document.body.addEventListener('htmx:configRequest', (event) => {
-                event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
-            })
             // Show an error message when a bad status comes back from an HTMX call
             document.body.addEventListener('htmx:beforeOnLoad', (event) => {
                 if (event.detail.xhr.status >= 400) {
