--- a/functionary/ui/templates/core/function_list.html
+++ b/functionary/ui/templates/core/function_list.html
@@ -1,38 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
     <div>
-        {% for function in object_list %}
-            <div class="block">
-                <div class="card">
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-left">
-                                <span class="icon is-large">
-                                    <i class="fa fa-2x fa-cube"></i>
-                                </span>
-                            </div>
-                            <div class="media-content">
-                                <a href="{% url 'ui:function-detail' function.id %}">
-                                    <p class="title is-4">
-                                        {% if function.display_name %}
-                                            {{ function.display_name }} ({{ function.name }})
-                                        {% else %}
-                                            {{ function.name }}
-                                        {% endif %}
-                                    </p>
-                                </a>
-                                <p class="subtitle is-6">
-                                    <a class="has-text-info"
-                                       href="{% url 'ui:package-detail' function.package.id %}">
-                                        <span class="icon"><i class="fa fa-cubes"></i></span>&nbsp;{{ function.package.name|lower }}
-                                    </a>
-                                </p>
-                                {% if function.summary %}<p class="subtitle is-6">{{ function.summary }}</p>{% endif %}
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        {% endfor %}
+        
+        {% include "partials/search_bar.html" with function_search=True %}
+
+        <div id="results">
+            {% for function in object_list %}
+                {% include "partials/function_element.html" with function=function %}
+            {% endfor %}
+        </div>
+
     </div>
 {% endblock content %}
