--- a/functionary/ui/templates/core/team_detail.html
+++ b/functionary/ui/templates/core/team_detail.html
@@ -37,6 +37,7 @@
                 </ul>
             </div>
             <div class="field">
+                {% if not team_create_perm %}
                 <label class="label" for="users">
                     <i class="fa fa-user"></i>&nbsp;Users:
                 </label>
@@ -49,6 +50,9 @@
                         </li>
                     {% endfor %}
                 </ul>
+                {% else %}
+                    {% include "partials/teams/team_management.html" %}
+                {% endif %}
             </div>
             {% include 'partials/variables_section.html' with parent_object=team parent_id=team.id %}
         </div>
