--- a/functionary/ui/templates/partials/task_log.html
+++ b/functionary/ui/templates/partials/task_log.html
@@ -1,7 +1,7 @@
 <div>
-    {% if task_log == "" %}
+    {% if task.log == "" %}
         <p>This task does not have any logs to display.</p>
     {% else %}
-        <pre class="mr-4">{{ task_log }}</pre>
+        <pre class="mr-4">{{ task.log }}</pre>
     {% endif %}
 </div>
