--- a/functionary/ui/templates/forms/teams/team_update_user.html
+++ b/functionary/ui/templates/forms/teams/team_update_user.html
@@ -6,10 +6,12 @@
             <input id="username-field" class="input is-medium" disabled placeholder="{{ username }}"/>
         </div>
         <div class="field column is-half">
-            <label class="{% if form.role.errors %}errors{% endif %} label" for="id_role">Role:</label>
-            {{ form.role }}
+            <label class="{% if form.role.errors %}errors{% endif %} label" for="{{ form.role.id_for_label }}">Role:</label>
+            <div class="select is-medium is-fullwidth">
+                {{ form.role }}
+            </div>
         </div>
     </div>
 
-    <button class="button is-link" type="submit" value="Add User">Update Role</button>
+    <button class="button is-link" type="submit" value="Update Role">Update Role</button>
 </form>
