--- a/functionary/ui/templates/partials/environments/environment_management.html
+++ b/functionary/ui/templates/partials/environments/environment_management.html
@@ -5,46 +5,50 @@
             hx-get="{% url 'ui:create-environment-member' environment_id %}"
             hx-target="#add-user"
             type="button">
-        <span class="fa fa-plus" />
+        <span class="fa fa-plus"></span>
     </button>
 </label>
 
 <div id="add-user">
-    {% if form %}
-        {% include 'partials/environments/environments_user_update.html' with form=form %}
-    {% endif %}
 </div>
 
-<ul id="users">
-    {% for u in users %}
-        <li class="block ml-4 mb-4">
-            <!-- Add in-line form to switch user's role. Pass in id of user. Maybe with a dropdown menu that posts on select?
-            Let user downgrade their own permissions? -->
-            <p>
-                {{ u.user.first_name }} {{ u.user.last_name }} 
-                <span class="has-text-grey-light">({{ u.user.username }})</span>
-                <span>[{{ u.role }}]</span>
-                <span class="has-text-grey-light">{% if u.inherited %}Inherited{% endif %}</span>
-                <button class="button is-small has-text-link is-white singletonActive"
-                    hx-get="{% url 'ui:update-environment-member' environment_id=environment_id user_id=u.user.id %}"
-                    hx-target="#{{ u.user.username }}"
-                ><span class="fa fa-wrench"></span>
-                </button>
-                {% if not u.inherited %}
-                <button class="button is-small has-text-link is-white singletonActive"
-                    hx-delete="{% url 'ui:delete-environment-member' environment_id=environment_id user_id=u.user.id %}"
-                    hx-confirm="Are you sure you want to remove {{ u.user.username }} from this team?"
-                    hx-target="closest li"
-                    hx-swap="outerHTML swap:1s"
-                ><span class="fa fa-trash"></span>
-                </button>
-                {% endif %}
-            </p>
-            <div id="{{ u.user.username }}">
-                {% if form %}
-                    {% include 'partials/teams/environment_update_user.html' %}
-                {% endif %}
-            </div>
-        </li>
-    {% endfor %}
-</ul>
+<table class="table is-hoverable">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Username</th>
+            <th>Effective Role</th>
+            <th>Role Origin</th>
+            <th></th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for u in users %}
+            <tr>
+                <td>{{ u.user.first_name }} {{ u.user.last_name }}</td>
+                <td>{{ u.user.username }}</td>
+                <td>{{ u.role }}</td>
+                <td>{{ u.origin }}</td>
+                <td>
+                    <button class="button is-small has-text-link is-white singletonActive"
+                            hx-get="{% url 'ui:update-environment-member' environment_id=environment_id user_id=u.user.id %}"
+                            hx-target="#update-modal">
+                        <span class="fa fa-wrench"></span>
+                    </button>
+                </td>
+                <td>
+                    <button class="button is-small has-text-link is-white singletonActive"
+                            hx-delete="{% url 'ui:delete-environment-member' environment_id=environment_id user_id=u.user.id %}"
+                            hx-confirm="Are you sure you want to remove {{ u.user.username }}'s from this environment?"
+                            hx-target="closest tr"
+                            hx-swap="outerHTML swap:1s">
+                        <span class="fa fa-trash"></span>
+                    </button>
+                </td>
+            </tr>
+        {% endfor %}
+    </tbody>
+</table>
+<div id="update-modal">
+</div>
