--- a/functionary/ui/templates/partials/environments/environment_update_user.html
+++ b/functionary/ui/templates/partials/environments/environment_update_user.html
@@ -1,1 +1,12 @@
-{% include "partials/modal.html" with title="Update user role" description="Update the role of the user in this environment." content="forms/environments/environment_update_user.html" %}
+{% extends "partials/modal.html" %}
+{% block modal_title %}
+Update User Role
+{% endblock%}
+
+{% block modal_description %}
+Update the role of the user in this environment.
+{% endblock %}
+
+{% block modal_block%}
+{% include "forms/environments/environment_update_user.html" %}
+{% endblock%}
