--- a/functionary/ui/templates/partials/teams/team_add_user.html
+++ b/functionary/ui/templates/partials/teams/team_add_user.html
@@ -1,1 +1,12 @@
-{% include "partials/modal.html" with title="Add user" description="Add user to team." content="forms/teams/team_add_user.html" %}
+{% extends "partials/modal.html" %}
+{% block modal_title %}
+Add User
+{% endblock%}
+
+{% block modal_description %}
+Add user to the team.
+{% endblock %}
+
+{% block modal_block%}
+{% include "forms/teams/team_add_user.html" %}
+{% endblock%}
