--- a/functionary/ui/templates/partials/teams/user_list.html
+++ b/functionary/ui/templates/partials/teams/user_list.html
@@ -1,5 +1,13 @@
-<datalist id="user-list">
-    {% for username in usernames %}
-        <option value="{{ username }}">{{ username }}</option>
-    {% endfor %}
-</datalist>
+<div id="user-list-block">
+    {% if not usernames|length %}
+    <ul class="errorlist">
+        <li>User not found.</li>
+    </ul>
+    {% endif %}
+
+    <datalist id="user-list">
+        {% for username in usernames %}
+            <option value="{{ username }}">{{ username }}</option>
+        {% endfor %}
+    </datalist>
+</div>
