--- a/functionary/ui/templates/forms/teams/team_add_user.html
+++ b/functionary/ui/templates/forms/teams/team_add_user.html
@@ -1,23 +1,43 @@
-<form hx-post="{% url 'ui:create-team-member' team_id %}" method="post">
-    {% csrf_token %}
-    <div class="columns is-multiline">
-        <div class="field column is-half">
-            <label class="{% if form.user.errors %}errors{% endif %} label" for="user">User:</label>
-            <input class="input is-medium" name="user" id="user" list="user-list"
-            hx-get="{% url 'ui:get-users' %}"
-            hx-trigger="keyup changed delay:500ms"
-            hx-swap="outerHTML"
-            hx-target="#user-list"/>
-            {{ form.user.errors }}
-            {% include "partials/teams/user_list.html" with usernames=usernames %}
-        </div>
-        <div class="field column">
-            <label class="{% if form.role.errors %}errors{% endif %} label" for="{{ form.role.id_for_label }}">Role:</label>
-            <div class="select is-medium is-fullwidth">
-                {{ form.role }}
-            </div>
+{% extends "partials/modal.html" %}
+
+{% block modal_title %}
+Add User
+{% endblock%}
+
+{% block modal_description %}
+Add user to the team.
+{% endblock %}
+
+{% block form_declaration %}
+<form hx-post="{% url 'ui:create-team-member' team_id %}" method="post" hx-swap="outerHTML" hx-target="#form-modal">
+{% endblock %}
+
+{% block modal_block%}
+{% csrf_token %}
+<div class="columns is-multiline">
+    <div class="field column is-half">
+        <label class="{% if form.user.errors %}errors{% endif %} label" for="user">User:</label>
+        <input class="input is-medium" name="user" id="user" list="user-list"
+        hx-get="{% url 'ui:get-users' %}"
+        hx-trigger="keyup changed delay:500ms"
+        hx-swap="outerHTML"
+        hx-target="#user-list-block"/>
+        {{ form.user.errors }}
+        {% include "partials/teams/user_list.html" with usernames=usernames %}
+    </div>
+    <div class="field column">
+        <label class="{% if form.role.errors %}errors{% endif %} label" for="{{ form.role.id_for_label }}">Role:</label>
+        <div class="select is-medium is-fullwidth">
+            {{ form.role }}
         </div>
     </div>
+</div>
+{% endblock %}
 
-    <button class="button is-link" type="submit" value="Add User">Add User</button>
+{% block modal_footer %}
+<button class="button is-link is-medium" type="submit" value="Add User">Add User</button>
+{% endblock %}
+
+{% block form_end %}
 </form>
+{% endblock %}
