Installed tailwindcss and daisyUI

--- a/functionary/ui/templates/base.html
+++ b/functionary/ui/templates/base.html
@@ -29,6 +29,9 @@
         <link rel="stylesheet"
               href="{% static 'css/functionary.css' %}"
               type="text/css"/>
+        <link rel="stylesheet"
+              href="{% static 'css/output.css' %}"
+              type="text/css"/>
         <title>Functionary</title>
         <script src="{% static 'js/htmx-1.8.4.min.js' %}"></script>
         <script src="{% static 'js/pretty-print-json-1.2.min.js' %}"></script>
