#147 - Switched to modelforms, updated role enums, removed unused functions

--- a/functionary/ui/templates/core/team_detail.html
+++ b/functionary/ui/templates/core/team_detail.html
@@ -42,7 +42,7 @@
                     <i class="fa fa-user"></i>&nbsp;Users:
                 </label>
                 <ul id="users">
-                    {% for u in users %}
+                    {% for u in user_details %}
                         <li class="block ml-4">
                             <p>
                                 {{ u.first_name }} {{ u.last_name }} <span class="has-text-grey-light">({{ u.username }})</span>
